--- a/index.html
+++ b/index.html
@@ -1,79 +1,172 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+        <style>
+            @media screen and (max-width:360px){
+                .p {font-size: 25px;
+                     color: #998A00;} 
+            }
+            @media screen and (min-width: 361px) and (max-width:640px){
+                .p {font-size: 30px;
+                     color: #050099;}
+            }
+            @media screen and (min-width: 641px){
+                .p {font-size: 30px;} 
+            } 
+            
+  <title>I'm Not There'</title>
+  <style>
+   
+pre{text-align:center;
+color:#5D5D5D;
+font-size:25px;
+font-family:Helvetica Neue LT Pro 33,Calibri;
+font-weight:bold;}
+a{text-align:center;
+  color: #5D5D5D;
+  font-size: 20px;
+font-family:-윤고딕320 보통,나눔바른고딕;}
+p{text-align:left;
+color:#5D5D5D;
+font-size:15px;
+font-family:-윤고딕320 보통,나눔바른고딕;}
+b{text-align:right;
+color:gray;
+  font-size:15px;}
+  </style>
+</head>
+<body background="http://blogfiles.naver.net/20141110_91/esparkaa_1415615532757JjDVy_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png">
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Testtest : ">
+ 
+  
+  <a href="#a">줄거리</a>
+  <a href="#b">제작,출연</a>
+ 
+  <pre>
+I'm Not There.
+  </pre>
+  <a name="a">줄거리</a>
+  <input type="button" onclick="fold()" value="접기" id='bFold'>
+  <div class="p">
+  <div  id="foldDiv">
+  <아임 낫 데어>는 전설적 포크락 가수 밥 딜런 특유의 시적인 가사를 줄기로 삼아 밥 딜런의 7가지 서로 다른 자아의 이미지와 이야기들을 연달아 진행시키며 미국 역사상 가장 강렬한 아이콘의 생동감 있는 초상을 완성한다. 음악적 변신으로 비난 받는 뮤지션 '쥬드'(케이트 블란챗), 저항음악으로 사랑받는 포크 가수 '잭'(크리스찬 베일), 회심한 가스펠 가수 '존'(크리스찬 베일)이 대중에게 주목받는 뮤지션으로서의 밥딜런의 실제 삶을 보여준다면, 영화 속 영화에서 '잭'을 연기하는 배우인 '로비'(히스 레저)는 밥 딜런이 아니면서도 어딘가 그를 닮은 미묘한 인상을 남긴다. 은퇴한 총잡이 '빌리'(리처드 기어)와 시인 '아서'(벤 위쇼). 그리고 음악적 스승 '우디'는 밥 딜런의 문화적 배경과 영감의 원천을 상징하며 아이덴티티를 농밀하게 완성해낸다.
+  영화제 소개 글. 밥 딜런의 삶과 음악을 일곱명의 캐릭터를 통해 비춰낸다는, 색다른 형식의 전기영화. 영화는 밥 딜런이 살았던 시대와 인생에 대한 비전통적인 여행이다. 6명의 배우가 딜런의 페르소나-공적, 사적, 환상적인 페르소나에 이르기까지-가 되어 연이어 등장하며 미국 역사상 가장 강렬한 아이콘의 생동감있는 초상을 완성한다. 시인, 선지자, 외부인, 가짜, 유명스타, 록커, 회심한 기독인이라는 7개의 아이덴티티가 함께 모여 각각이 은유하고 있는 시대를 농밀하게 표현하며 하나의 인생을 살아 숨쉬게 한다.</P>
+  </div>
+    <a name="b">제작,출연</a>
+    <p>
+      <img src="http://tv03.search.naver.net/nhnsvc?size=111x139&quality=9&q=http://imgmovie.naver.net/mdi/pi/000000015/00000001554-t.jpg" align= /><br /> 
+      <p>       
+        <p class="title">
+        <b><a style="text-decoration:none;" onMouseover="this.style.textDecoration='underline';" onMouseout="this.style.textDecoration='none';"
+ href="http://movie.naver.com/movie/bi/pi/basic.nhn?code=1554" target="_white"
+              ><font color="black"
+                                                                                   >토드 헤인즈</font></a></b>
+      </p>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+Todd Haynes
+다른작품
+캐롤
+연출
+2015
+영국, 미국/
+어둠 속에서
+기획
+2013
+미국
+  </P>
+          <img src="http://tv03.search.naver.net/nhnsvc?size=111x139&quality=9&q=http://imgmovie.naver.net/mdi/pi/000000002/PM221_135531_000.jpg" border="0" /><br /> 
+      <p>       
+        <p class="title">
+        <b><a style="text-decoration:none;" onMouseover="this.style.textDecoration='underline';" onMouseout="this.style.textDecoration='none';"
+ href="http://movie.naver.com/movie/bi/pi/basic.nhn?code=221" target="_white"><font color="black">케이트 블란쳇</font></a></b>
+      </p>
+Cate Blanchett
+주연
+쥬드 퀸 역
+정글북: 오리진,2016
+트루스,2016
+          </p>
+          <img src="http://tv03.search.naver.net/nhnsvc?size=111x139&quality=9&q=http://imgmovie.naver.net/mdi/pi/000000853/PM85348_200443_000.jpg" /><br /> 
+         <p>
+           <p>       
+        <p class="title">
+        <b><a style="text-decoration:none;" onMouseover="this.style.textDecoration='underline';" onMouseout="this.style.textDecoration='none';"
+ href="http://movie.naver.com/movie/bi/pi/basic.nhn?code=85348" target="_white"><font color="black">벤 위쇼</font></a></b>
+      </p>
+Ben Whishaw
+주연
+아서 림바우드 역
+더 랍스터,2015
+하트 오브 더 씨,2015
+           </p>
+          <img src="http://tv03.search.naver.net/nhnsvc?size=111x139&quality=9&q=http://sstatic.naver.net/people/12/201402111745386301.jpg" /><br /> 
+          <p>
+           <p>       
+        <p class="title">
+        <b><a style="text-decoration:none;" onMouseover="this.style.textDecoration='underline';" onMouseout="this.style.textDecoration='none';"
+ href="http://movie.naver.com/movie/bi/pi/basic.nhn?code=2246" target="_white"><font color="black">크리스찬 베일</font></a></b>
+      </p>
+Christian Bale
+주연
+잭 콜린스/패스터 존 역
+정글북: 오리진,2016
+테런스 맬릭 프로젝트 (가제),2015
+          </P>
+          <img src="http://tv03.search.naver.net/nhnsvc?size=111x139&quality=9&q=http://sstatic.naver.net/people/143/201211221355022961.jpg" /><br /> 
+          <p>
+           <p>       
+        <p class="title">
+        <b><a style="text-decoration:none;" onMouseover="this.style.textDecoration='underline';" onMouseout="this.style.textDecoration='none';"
+ href="http://movie.naver.com/movie/bi/pi/basic.nhn?code=1303" target="_white"><font color="black">리차드 기어</font></a></b>
+      </p>
+Richard Gere
+주연
+빌리 더 키드 역
+베스트 엑조틱 메리골드 호텔 2,2015
+타임 아웃 오브 마인드,2014
+          </p>
+          <img src="http://tv03.search.naver.net/nhnsvc?size=111x139&quality=9&q=http://sstatic.naver.net/people/63/201211201551499521.jpg" /><br />
+          <p>
+           <p>       
+        <p class="title">
+        <b><a style="text-decoration:none;" onMouseover="this.style.textDecoration='underline';" onMouseout="this.style.textDecoration='none';"
+ href="http://movie.naver.com/movie/bi/pi/basic.nhn?code=545" target="_white"><font color="black">히스 레저</font></a></b>
+      </p>
+Heath Ledger
+주연
+로비 클락 역
+파르나서스 박사의 상상극장,2009
+다크 나이트,2008
+          </P>
+      <img src="http://tv03.search.naver.net/nhnsvc?size=111x139&quality=9&q=http://sstatic.naver.net/people/156/20130108101540211.png" /><br />
+      <p>
+           <p>       
+        <p class="title">
+        <b><a style="text-decoration:none;" onMouseover="this.style.textDecoration='underline';" onMouseout="this.style.textDecoration='none';"
+ href="http://movie.naver.com/movie/bi/pi/basic.nhn?code=897" target="_white"><font color="black">크리스 크리스토퍼슨</font></a></b>
+      </p>
+Kris Kristofferson
+주연
+나레이터 목소리 역
+돌핀 테일 2,2014
+엔젤스 싱,2013
+  </P>
+</div>
 
-    <title>Testtest</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/esparkaa/testtest">View on GitHub</a>
-
-          <h1 id="project_title">Testtest</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/esparkaa/testtest/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/esparkaa/testtest/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Testtest maintained by <a href="https://github.com/esparkaa">esparkaa</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+<script type="text/javascript">
+  function fold(){
+    if (document.getElementById("foldDiv").style.display!="none"){
+      document.getElementById("foldDiv").style.display="none";
+      document.getElementById("bFold").value="펴기";
+    } else {
+      document.getElementById("foldDiv").style.display="initial";
+      document.getElementById("bFold").value="접기";
+    }
+  }
+</script>
+ 
+</body>
 </html>
