--- a/index.html
+++ b/index.html
@@ -1,25 +1,9 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-        <style>
-            @media screen and (max-width:360px){
-                .p {font-size: 25px;
-                     color: #998A00;} 
-            }
-            @media screen and (min-width: 361px) and (max-width:640px){
-                .p {font-size: 30px;
-                     color: #050099;}
-            }
-            @media screen and (min-width: 641px){
-                .p {font-size: 30px;} 
-            } 
-            
-  <title>I'm Not There'</title>
+  <title>JS Bin</title>
   <style>
-   
 pre{text-align:center;
 color:#5D5D5D;
 font-size:25px;
@@ -35,12 +19,9 @@ font-size:15px;
 font-family:-윤고딕320 보통,나눔바른고딕;}
 b{text-align:right;
 color:gray;
-  font-size:15px;}
-  </style>
+  font-size:15px;}</style>
 </head>
 <body background="http://blogfiles.naver.net/20141110_91/esparkaa_1415615532757JjDVy_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png">
-
- 
   
   <a href="#a">줄거리</a>
   <a href="#b">제작,출연</a>
@@ -49,21 +30,15 @@ color:gray;
 I'm Not There.
   </pre>
   <a name="a">줄거리</a>
-  <input type="button" onclick="fold()" value="접기" id='bFold'>
-  <div class="p">
-  <div  id="foldDiv">
-  <아임 낫 데어>는 전설적 포크락 가수 밥 딜런 특유의 시적인 가사를 줄기로 삼아 밥 딜런의 7가지 서로 다른 자아의 이미지와 이야기들을 연달아 진행시키며 미국 역사상 가장 강렬한 아이콘의 생동감 있는 초상을 완성한다. 음악적 변신으로 비난 받는 뮤지션 '쥬드'(케이트 블란챗), 저항음악으로 사랑받는 포크 가수 '잭'(크리스찬 베일), 회심한 가스펠 가수 '존'(크리스찬 베일)이 대중에게 주목받는 뮤지션으로서의 밥딜런의 실제 삶을 보여준다면, 영화 속 영화에서 '잭'을 연기하는 배우인 '로비'(히스 레저)는 밥 딜런이 아니면서도 어딘가 그를 닮은 미묘한 인상을 남긴다. 은퇴한 총잡이 '빌리'(리처드 기어)와 시인 '아서'(벤 위쇼). 그리고 음악적 스승 '우디'는 밥 딜런의 문화적 배경과 영감의 원천을 상징하며 아이덴티티를 농밀하게 완성해낸다.
+  <p><아임 낫 데어>는 전설적 포크락 가수 밥 딜런 특유의 시적인 가사를 줄기로 삼아 밥 딜런의 7가지 서로 다른 자아의 이미지와 이야기들을 연달아 진행시키며 미국 역사상 가장 강렬한 아이콘의 생동감 있는 초상을 완성한다. 음악적 변신으로 비난 받는 뮤지션 '쥬드'(케이트 블란챗), 저항음악으로 사랑받는 포크 가수 '잭'(크리스찬 베일), 회심한 가스펠 가수 '존'(크리스찬 베일)이 대중에게 주목받는 뮤지션으로서의 밥딜런의 실제 삶을 보여준다면, 영화 속 영화에서 '잭'을 연기하는 배우인 '로비'(히스 레저)는 밥 딜런이 아니면서도 어딘가 그를 닮은 미묘한 인상을 남긴다. 은퇴한 총잡이 '빌리'(리처드 기어)와 시인 '아서'(벤 위쇼). 그리고 음악적 스승 '우디'는 밥 딜런의 문화적 배경과 영감의 원천을 상징하며 아이덴티티를 농밀하게 완성해낸다.
   영화제 소개 글. 밥 딜런의 삶과 음악을 일곱명의 캐릭터를 통해 비춰낸다는, 색다른 형식의 전기영화. 영화는 밥 딜런이 살았던 시대와 인생에 대한 비전통적인 여행이다. 6명의 배우가 딜런의 페르소나-공적, 사적, 환상적인 페르소나에 이르기까지-가 되어 연이어 등장하며 미국 역사상 가장 강렬한 아이콘의 생동감있는 초상을 완성한다. 시인, 선지자, 외부인, 가짜, 유명스타, 록커, 회심한 기독인이라는 7개의 아이덴티티가 함께 모여 각각이 은유하고 있는 시대를 농밀하게 표현하며 하나의 인생을 살아 숨쉬게 한다.</P>
-  </div>
     <a name="b">제작,출연</a>
     <p>
-      <img src="http://tv03.search.naver.net/nhnsvc?size=111x139&quality=9&q=http://imgmovie.naver.net/mdi/pi/000000015/00000001554-t.jpg" align= /><br /> 
+      <img src="http://tv03.search.naver.net/nhnsvc?size=111x139&quality=9&q=http://imgmovie.naver.net/mdi/pi/000000015/00000001554-t.jpg" /><br /> 
       <p>       
         <p class="title">
         <b><a style="text-decoration:none;" onMouseover="this.style.textDecoration='underline';" onMouseout="this.style.textDecoration='none';"
- href="http://movie.naver.com/movie/bi/pi/basic.nhn?code=1554" target="_white"
-              ><font color="black"
-                                                                                   >토드 헤인즈</font></a></b>
+ href="http://movie.naver.com/movie/bi/pi/basic.nhn?code=1554" target="_white"><font color="black">토드 헤인즈</font></a></b>
       </p>
 
 Todd Haynes
@@ -154,19 +129,6 @@ Kris Kristofferson
 돌핀 테일 2,2014
 엔젤스 싱,2013
   </P>
-</div>
-
-<script type="text/javascript">
-  function fold(){
-    if (document.getElementById("foldDiv").style.display!="none"){
-      document.getElementById("foldDiv").style.display="none";
-      document.getElementById("bFold").value="펴기";
-    } else {
-      document.getElementById("foldDiv").style.display="initial";
-      document.getElementById("bFold").value="접기";
-    }
-  }
-</script>
  
 </body>
 </html>
