--- a/index.html
+++ b/index.html
@@ -2,26 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>JS Bin</title>
+
   <style>
-pre{text-align:center;
-color:#5D5D5D;
-font-size:25px;
-font-family:Helvetica Neue LT Pro 33,Calibri;
-font-weight:bold;}
-a{text-align:center;
-  color: #5D5D5D;
-  font-size: 20px;
-font-family:-윤고딕320 보통,나눔바른고딕;}
-p{text-align:left;
-color:#5D5D5D;
-font-size:15px;
-font-family:-윤고딕320 보통,나눔바른고딕;}
-b{text-align:right;
-color:gray;
-  font-size:15px;}</style>
+pre{text-align:center; color:#5D5D5D; font-size:25px; font-family:Helvetica Neue LT Pro 33,Calibri; font-weight:bold;}
+a{text-align:center;  color: #5D5D5D;  font-size: 20px; font-family:-윤고딕320 보통,나눔바른고딕;}
+p{text-align:left; color:#5D5D5D; font-size:15px; font-family:-윤고딕320 보통,나눔바른고딕;}
+b{text-align:right; color:gray;  font-size:15px;}
+  
+  
+.bgImage { background img="http://blogfiles.naver.net/20141110_91/esparkaa_1415615532757JjDVy_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png"}
+
+  
+</style>
 </head>
-<body background="http://blogfiles.naver.net/20141110_91/esparkaa_1415615532757JjDVy_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png">
+<body>
   
   <a href="#a">줄거리</a>
   <a href="#b">제작,출연</a>
