--- a/poster.html
+++ b/poster.html
@@ -8,12 +8,8 @@
 
     <title>포스터 그리기</title>
     <style>
-    .bgImage{
-        background-image:URL("http://postfiles10.naver.net/20141110_57/esparkaa_1415617504286nFcs9_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png?type=w3");
-         background-size:  700px;
-      
-        height: 750px;
-margin: 50px; padding: 40px;}
+
+        {background-image:URL("http://postfiles10.naver.net/20141110_57/esparkaa_1415617504286nFcs9_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png?type=w3")}
 
       
       .title{
@@ -108,7 +104,7 @@ document.getElementById("windows").innerHTML = "Window width is " + winwidth + "
 
       <a id="menu">
 
- <a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=61628">
+ <a href="http://esparkaa.github.com/esparkaa/index.html">
 <font color="black">      소개
   </a>
 
