--- a/poster.html
+++ b/poster.html
@@ -8,8 +8,13 @@
 
     <title>포스터 그리기</title>
     <style>
+    .bgImage{
+        background-image:URL("http://blogfiles.naver.net/20141110_91/esparkaa_1415615532757JjDVy_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png");
+         background-size:  700px;
+      
+        height: 750px;
+margin: 50px; padding: 40px;}
 
-        {background-image:URL("http://postfiles10.naver.net/20141110_57/esparkaa_1415617504286nFcs9_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png?type=w3")}
 
       
       .title{
@@ -81,6 +86,8 @@
 
   </head>
   <body>
+
+<body background="http://blogfiles.naver.net/20141110_91/esparkaa_1415615532757JjDVy_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png">
 
 
  <bgImg id="screens"></bgImg>
