--- a/poster.html
+++ b/poster.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1 maximum-scale=1">
        
     <style>
-    .bgImage{ background-image:URL("http://blogfiles.naver.net/20141110_91/esparkaa_1415615532757JjDVy_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png");}
+    .bgImage{ background-image:URL("http://blogfiles.naver.net/20141110_91/esparkaa_1415615532757JjDVy_PNG/%B9%E8%B0%E6%C8%B8%BB%F6.png"); 
+          background-size:  700px; height: 750px; margin: 50px; padding: 40px; }
       
       .title{
         font-family: Arial; 
